--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,8 @@
-find_package( OpenCV REQUIRED )
-add_executable( ${PROJECT_NAME} main.cpp )
-target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} )
+find_package(OpenCV REQUIRED)
+find_package(Boost REQUIRED COMPONENTS system filesystem)
+
+add_library(fs image_loader.cpp)
+target_link_libraries(fs ${Boost_LIBRARIES})
+
+add_executable(${PROJECT_NAME} main.cpp)
+target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
